created plan and execute agent using phi and gemini

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,11 @@ langchain
 sentence_transformers
 langchain-google-genai
 langgraph
+
+llama-index-core
+llama-index
+llama-index-llms-lmstudio
+llama-index-packs-raptor
+llama-index-vector-stores-qdrant
+qdrant_client
+llama-index-embeddings-langchain
